--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,124 @@
-# Dependencies
-node_modules/
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.pyo
+*.cover
+*.py,cover
+.coverage
+.pytest_cache/
+.tox/
+.venv/
+.env/
+venv/
+env/
+backend/venv/
+backend/env/
+backend/.venv/
+*.egg-info/
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.example
 
 # Next.js
 .next/
 out/
 build/
+next-env.d.ts
 
-# Debug logs
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+.pnpm-store/
+*.tgz
+.npm
+.eslintcache
 
-# Vercel
-.vercel
+# Package managers
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
 
 # TypeScript
 *.tsbuildinfo
-next-env.d.ts
+
+# IDEs and Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.vim/
+.netrwhist
+
+# System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.parcel-cache/
+
+# API keys and secrets
+secrets/
+keys/
+*.key
+*.pem
+
+# Memory Bank (project-specific)
+memory-bank/
+
+# OS generated files
+.fuse_hidden*
+.directory
+.Trash-*
+nohup.out
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.iws
+
+# Sublime Text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+
+# Visual Studio
+.vs/
