--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "dprint fmt",
+    "format:check": "dprint check"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
