--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 fastapi
-uvicorn
+uvicorn[standard]
+gunicorn
 google-generativeai
 python-multipart
-opencv-python
+opencv-python-headless
 numpy
 python-dotenv
+python-cors
