Fix deployment issues - Add Docker-first approach, fix package versions, add Koyeb configs

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
-uvicorn[standard]
-gunicorn
-google-generativeai
-python-multipart
-opencv-python-headless
-numpy
-python-dotenv
-python-cors
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+gunicorn==21.2.0
+google-generativeai==0.3.2
+python-multipart==0.0.6
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
+python-dotenv==1.0.0
