--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "my-v0-project",
+  "name": "lutforge-ai-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -52,7 +56,7 @@
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
-    "react-dropzone": "latest",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
