Add Docker approach for Koyeb env variables - startup script and improved URL detection

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,11 +13,15 @@ RUN npm ci
 # Copy application code
 COPY . .
 
+# Copy and make startup script executable
+COPY start.sh ./
+RUN chmod +x start.sh
+
 # Build the application
 RUN npm run build
 
 # Expose port
 EXPOSE 3000
 
-# Command to run the application
-CMD ["npm", "start"] 
+# Use the startup script
+CMD ["./start.sh"] 
