--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
-google-generativeai==0.3.2
-python-multipart==0.0.6
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-python-dotenv==1.0.0
+fastapi==0.115.12
+uvicorn[standard]==0.34.3
+gunicorn==23.0.0
+google-generativeai==0.8.5
+python-multipart==0.0.20
+opencv-python-headless==4.11.0.86
+numpy==2.3.0
+python-dotenv==1.1.0
 ujson==5.8.0
+color-matcher==0.6.0
+scikit-image==0.25.2
+Pillow==11.2.1
